fix(coloring): changed contrast of system chat message

--- a/src/resources/styles/settings.scss
+++ b/src/resources/styles/settings.scss
@@ -69,6 +69,7 @@ $message-name-system: var(--skin-color-default, $primary);
 $message-name-consultant: var(--skin-color-default, $primary);
 $message-name-user: #1b998b;
 $message-name-forwarded: $yellow-6;
+$message-system: #8c878c;
 
 // FONT SIZES
 // TODO: delete headline styles when every headline uses <Headline/>
